# displaceController

./: app.py  displace_controller_server.py
DisplaceBleRC/: .gitignore  CMakeLists.txt  DxBluetooth.qml  DxBusyIndicator.qml  DxButton.qml  DxButtonApp.qml  DxButtonCircularIcon.qml  DxButtonFunctional.qml  DxButtonIconAndText.qml  DxButtonIconAndTextBellow.qml  DxButtonIconOnly.qml  DxButtonTextOnly.qml  DxHr.qml  DxIconColored.qml  DxLabel.qml  DxLabelClickable.qml  DxSlider.qml  DxSwitch.qml  DxTextField.qml  DxWallmountIndicator.qml  DxcBattery.qml  DxcHeader.qml  DxcListApp.qml  DxcListFunctionalButton.qml  DxcListPairedTv.qml  DxcListVideo.qml  DxcMainTitle.qml  DxcPage.qml  DxcPairButton.qml  DxcPairedRoom.qml  DxcPairedRoomSimplified.qml  DxcQrScanner.qml  DxcScrollArea.qml  DxcSlideCtrl.qml  DxcSlideCtrlMini.qml  DxcSysInfo.qml  Global.qml  Main.qml  PagePairTV.qml  PairTV.qml  (+20 more)
DisplaceBleRC/android/: AndroidManifest.xml
DisplaceBleRC/android/app/: build.gradle.kts
DisplaceBleRC/android/app/src/main/: AndroidManifest.xml
DisplaceBleRC/android/app/src/main/kotlin/com/example/displacerc/: MainActivity.kt
DisplaceBleRC/android/res/values/: styles.xml
DisplaceBleRC/ios/Runner/: Info.plist
DisplaceBleRC/ios/Runner.xcodeproj/: project.pbxproj
DisplaceBleRC/lib/: main.dart
DisplaceBleRC/lib/components/: dp_battery.dart  dp_brightness.dart  dp_circle_button.dart  dp_icon.dart  dp_page.dart  dp_power_button.dart  dp_status_bar.dart  dp_text_button.dart  dp_text_button_white.dart
DisplaceBleRC/lib/constants/: app_colors.dart  app_info.dart  app_sizes.dart
DisplaceBleRC/lib/core/: logger.dart  timer_util.dart
DisplaceBleRC/lib/core/ble/: ble_controller.dart  ble_providers.dart  ble_service.dart  ble_service_fake.dart  ble_service_provider.dart  ble_service_real.dart  ble_state.dart  ble_state.freezed.dart
DisplaceBleRC/lib/core/db/: app_database.dart  app_database.g.dart  db_provider.dart
DisplaceBleRC/lib/core/msg/: compile.sh  msg.pb.dart  msg.pbenum.dart  msg.pbjson.dart  msg.proto
DisplaceBleRC/lib/core/screen/: screen_controller.dart  screen_providers.dart  screen_state.dart  screen_state.freezed.dart
DisplaceBleRC/lib/router/: router.dart  router_notifier.dart
DisplaceBleRC/lib/screens/main/: hscrollbar.dart  main_controller.dart  main_provider.dart  main_state.dart  main_state.freezed.dart  mouse_area.dart  screen_main.dart  scroll_types.dart  vscrollbar.dart
DisplaceBleRC/lib/screens/pairing/: screen_failed_pairing.dart  screen_pairing.dart  screen_successfully_paired.dart
DisplaceBleRC/lib/screens/permissions/: screen_permissions.dart
DisplaceBleRC/lib/screens/scanqr/: screen_scanqr.dart
DisplaceBleRC/linux/: CMakeLists.txt
DisplaceBleRC/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
DisplaceBleRC/linux/runner/: my_application.cc
DisplaceBleRC/macos/Flutter/: GeneratedPluginRegistrant.swift
DisplaceBleRC/macos/Runner.xcodeproj/: project.pbxproj
DisplaceBleRC/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
DisplaceBleRC/macos/Runner/Configs/: AppInfo.xcconfig
DisplaceBleRC/test/: widget_test.dart
DisplaceBleRC/updates/: 0.0.46.json  copy-json.sh
DisplaceBleRC/web/: index.html  manifest.json
DisplaceBleRC/windows/: CMakeLists.txt
DisplaceBleRC/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
DisplaceBleRC/windows/runner/: Runner.rc  main.cpp
DisplaceBleRC/zxing-cpp/zint/win32/: libzint.vcxproj  zint.vcxproj
DisplaceBleRC/zxing-cpp/zint/win32/vs2017/: libzint.vcxproj
DisplaceBleRC/zxing-cpp/zint/win32/vs2019/: libzint.vcxproj
PythonScript/: displace_controller_server.py
PythonScript/msg/: msg_pb2.py
